Note that this file only includes changes since Ice 3.2.1. For the
change history of prior releases, refer to the CHANGES file in the
subdirectory of each language mapping (e.g., cpp/CHANGES).


======================================================================
Changes since version 3.5.0
======================================================================


General Changes
===============

- Fixed bug in IceGrid::Query::findAllReplicas implementation that
  could cause a crash when trying to find the proxies of an empty
  replica group.

- Added support for SOCKSv4 proxies to the Ice core in C++, C# and
  Java. This allows outgoing TCP & SSL connections using IPv4 to be
  mediated by a network proxy service.

- Fixed bug that could cause an unexpected exception or error on
  connection closure when the connection is closed shortly before
  sending pending messages.

- Fixed the graphical IceGrid administrative tool to run and build
  in JVMs without JavaFX support.
  
- IceGrid node now initializes the process supplementary groups.

- Added man pages for Ice executable tools and commands.

- Added ability to list IceStorm topic subscribers.

- Fixed a bug in the graphical IceGrid administrative tool that cause
  the "Save" and "Save to File" commands to produce an empty file 
  without report any errors.
  

C++ Changes
===========

- Reading an optional with the Ice::InputStream::read method should
  now clear the optional if the optional isn't marshaled on the input
  stream.

- Fixed file descriptor leak that would occur if an object adapter
  listened on a UDP endpoint (one descriptor leaked per UDP endpoint).

- Fixed a bug that could cause an unexpected exception to be thrown on
  plugin loading when a plugin property specified both a path and
  version.

- Fixed a bug in slice2cpp that generated invalid C++ code for C++11
  asynchronous invocations.
  
- Fixed a bug in slice2cpp that generated invalid C++ code when using
  "cpp:virtual" metadata.
  