@@ -313,6 +313,23 @@ protected:
     Action _nextAction;
 };
 
+class SessionManager : public IceUtil::Monitor<IceUtil::Mutex>
+{
+public:
+
+    SessionManager();
+    virtual ~SessionManager();
+
+    virtual bool isDestroyed() = 0;
+
+protected:
+
+    void initQueryObjects(const Ice::LocatorPrx&);
+    std::vector<IceGrid::QueryPrx> findAllQueryObjects();
+
+    std::vector<IceGrid::QueryPrx> _queryObjects;
+};
+
 };
 
 #endif
